--- a/posts/2025-05-07.md
+++ b/posts/2025-05-07.md
@@ -2,8 +2,8 @@
 title: 'AN INTRODUCTORY POST'
 pubDate: 2025-05-07
 description: 'A "short" introduction, May 7, 2025'
-authoer: 'Steve Tamayo'
-draft: true
+author: 'Steve Tamayo'
+draft: false
 tags: ["mtg","sketch","art","scryfallrandom"]
 ---
 # AN INTRODUCTORY POST
