Update Markdown metadata and fix grammar in Day 70 post

--- a/posts/2025-05-08-Sketch-Day69.md
+++ b/posts/2025-05-08-Sketch-Day69.md
@@ -1,8 +1,8 @@
 ---
 title: "Day 69: Wayfarer's Bauble (TDC)"
 pubDate: 05-08-2025
-description: 'Sketch: May 6, 2025'
-author: 'Steve Tamayo'
+description: "Sketch: May 6, 2025"
+author: "Steve Tamayo"
 draft: false
 tags: ["mtg","sketch","art","scryfallrandom","dailysketch","ramp","Tomas Duchek"]
 ---
