--- a/posts/2025-05-08-Sketch-Day70.md
+++ b/posts/2025-05-08-Sketch-Day70.md
@@ -1,8 +1,8 @@
 ---
 title: "Day 70: Spelunking (LCI)"
 pubDate: 05-08-2025
-description: 'Sketch: May 7, 2025'
-author: 'Steve Tamayo'
+description: "Sketch: May 7, 2025"
+author: "Steve Tamayo"
 draft: false
 tags: ["mtg","sketch","art","scryfallrandom","dailysketch","ramp","Tomas Duchek"]
 ---
