Day 115 and Day 114 fixes

--- a/posts/2025-06-22-Sketch-Day114.md
+++ b/posts/2025-06-22-Sketch-Day114.md
@@ -1,12 +1,12 @@
 ---
-title: "Day 114: nspired Tinkering (CLB)"
+title: "Day 114: Inspired Tinkering (CLB)"
 pubDate: 06-22-2025
 description: "Sketch: June 20, 2025"
 author: "Steve Tamayo"
 draft: false
 tags: ["mtg","sketch","art","scryfallrandom","dailysketch","card-advantage","Craig J Spearing"]
 ---
-# Day 114: nspired Tinkering (CLB)
+# Day 114: Inspired Tinkering (CLB)
 ## Sketch: June 20, 2025
 
 
@@ -16,7 +16,7 @@ During lockdown, I joined an online D&D group as a cleric of Gond from Baldur's 
 <img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreif47hk5cde6uqgqvayzrq246ekjcni6vdgfzm7n44alzxz6akqgua@jpeg" height="200">
 
 
-###### My sketch of nspired Tinkering after 50 minutes.
+###### My sketch of Inspired Tinkering after 50 minutes.
 <img src="https://cards.scryfall.io/large/front/c/1/c1e6b1d3-1ac2-4f20-997e-25c93f1f7897.jpg?1674136627" height="200">
 
 
